# neuriplo-track

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  run_test.sh  versions.env
.github/actions/setup-deps/: action.yml
.github/workflows/: ci.yml  lint.yml
app/: CMakeLists.txt  main.cpp
app/inc/: AppConfig.hpp  CommandLineParser.hpp  MultiObjectTrackingApp.hpp  utils.hpp
app/src/: CommandLineParser.cpp  MultiObjectTrackingApp.cpp  utils.cpp
cmake/: DependencyValidation.cmake  versions.cmake
docs/: Build_Instructions.md  Code_Examples.md  End_To_End_Test.md  Multiple_Object_Tracking_Guide.md  System_Architecture.md
include/: BaseTracker.hpp  BoTSORTWrapper.hpp  ByteTrackWrapper.hpp  SortWrapper.hpp  TrackConfig.hpp  TrackedObject.hpp
scripts/: mot_docker_cpu.sh  setup_dependencies.sh
trackers/: BoTSORTWrapper.cpp  ByteTrackWrapper.cpp  CMakeLists.txt  SortWrapper.cpp
trackers/SORT/: Hungarian.cpp  Hungarian.hpp  KalmanTracker.cpp  KalmanTracker.hpp  Sort.cpp  Sort.hpp
